init commit graal

--- a/SpringTesting/api2/Dockerfile
+++ b/SpringTesting/api2/Dockerfile
@@ -1,18 +1,23 @@
-FROM maven:3.9-eclipse-temurin-17 AS builderjar
-WORKDIR /api2
-COPY . .
-RUN mvn clean package -DskipTests
 
-
-FROM alpine/java:17-jre
- 
+FROM ghcr.io/graalvm/native-image-community:21 AS buildjar
 WORKDIR /api2
 
-# copy hasil build
-COPY --from=builderjar /api2/target/api2.jar api2.jar
+COPY .mvn .mvn 
+COPY mvnw pom.xml agent.zip ./
+RUN chmod +x mvnw
 
-# Expose port default Spring Boot
-EXPOSE 8092
 
-# Gunakan JVM mode (bukan native)
-ENTRYPOINT ["java","-jar","api2.jar"]
+COPY ./pom.xml .
+COPY src ./src
+# RUN mvn  clean package -DskipTests --batch-mode
+RUN ./mvnw -e --batch-mode -DskipTests=true -Pnative -Pdynatrace-native native:compile
+
+
+# Stage 2: Run
+FROM oraclelinux:9-slim
+WORKDIR /api2
+COPY --from=buildjar /api2/target/api2  ./api2
+COPY --from=buildjar /api2/target/dynatrace ./dynatrace
+
+EXPOSE 8082
+ENTRYPOINT ["./api2"]
