--- a/SpringTesting/api1/Dockerfile
+++ b/SpringTesting/api1/Dockerfile
@@ -1,18 +1,23 @@
-FROM maven:3.9-eclipse-temurin-17 AS builderjar
-WORKDIR /api1
-COPY . .
-RUN mvn clean package -DskipTests
-
-
-FROM alpine/java:17-jre
- 
+FROM ghcr.io/graalvm/native-image-community:21 AS buildjar
 WORKDIR /api1
 
-# copy hasil build
-COPY --from=builderjar /api1/target/api1.jar api1.jar
+COPY .mvn .mvn 
+COPY mvnw pom.xml agent.zip ./
+RUN chmod +x mvnw
 
-# Expose port default Spring Boot
+
+COPY ./pom.xml .
+COPY src ./src
+# RUN mvn  clean package -DskipTests --batch-mode
+RUN ./mvnw -e --batch-mode -DskipTests=true -DskipTests org.graalvm.buildtools:native-maven-plugin:compile  -Pnative -Pdynatrace-native
+
+
+# Stage 2: Run
+FROM oraclelinux:9-slim
+WORKDIR /api1
+COPY --from=buildjar /api1/target/api1  ./api1
+COPY --from=buildjar /api1/target/dynatrace ./dynatrace
+
+
 EXPOSE 8081
-
-# Gunakan JVM mode (bukan native)
-ENTRYPOINT ["java","-jar","api1.jar"]
+ENTRYPOINT ["./api1"]
