--- a/SpringTesting/api2/src/main/resources/application.properties
+++ b/SpringTesting/api2/src/main/resources/application.properties
@@ -7,3 +7,41 @@ spring.datasource.password=${DB_PASS:stx13579}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.datasource.driver-class-name=io.opentelemetry.instrumentation.jdbc.OpenTelemetryDriver
+
+
+
+#management.endpoints.web.exposure.include=health,info,metrics
+#management.tracing.enabled=true
+management.tracing.sampling.probability=1.0
+
+
+
+
+#untuk tracing
+management.otlp.tracing.endpoint={$otel-tracing:null}
+management.otlp.tracing.headers.Authorization={$oteltoken:null}
+management.otlp.tracing.protocol=http/protobuf
+
+management.otlp.tracing.export.enabled=true
+management.tracing.export.logging.enabled=true
+
+
+
+
+
+#management.otlp.logging.endpoint={$otel-logging:null}
+management.otlp.logging.headers.Authorization={$oteltoken:null}
+
+management.dynatrace.metrics.export.uri={$otel-metrics:null}
+management.dynatrace.metrics.export.api-token={$oteltoken:null}
+
+
+
+
+
+
+management.dynatrace.metrics.export.v2.metric-key-prefix=api2.component
+management.dynatrace.metrics.export.v2.enrich-with-dynatrace-metadata=true
+management.dynatrace.metrics.export.v2.default-dimensions.stack=prod
+management.dynatrace.metrics.export.v2.default-dimensions.region=us-east-1
